--- a/php-app/default.conf
+++ b/php-app/default.conf
@@ -4,6 +4,8 @@ server {
     root   /usr/share/nginx/html;
     index  index.php index.html;
 
+    access_log off;
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
